[gd_scene load_steps=5 format=3 uid="uid://t3wn8svtywo7"]

[ext_resource type="Script" uid="uid://dto0x51csi6uf" path="res://UIs/HUDs/InScreenUIs/PauseAndResumeSystem/PauseUI/pause_ui.gd" id="1_vphq1"]
[ext_resource type="FontFile" uid="uid://8jy4g2nt0j52" path="res://Assets/Fonts/arial.ttf" id="2_5cfgx"]
[ext_resource type="FontFile" uid="uid://c4jwk71g5pyyk" path="res://Assets/Fonts/arialbd.ttf" id="2_gk5xj"]
[ext_resource type="StyleBox" uid="uid://b203igfkk6hkr" path="res://UIs/Styles/ButtonStyles/flat_white.tres" id="3_5cfgx"]

[node name="PauseUI" type="Control" node_paths=PackedStringArray("button_container", "canvas_layer")]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vphq1")
button_container = NodePath("CanvasLayer/BackgroundRect/ButtonContainer")
canvas_layer = NodePath("CanvasLayer")
to_show_layer = 11
to_hide_layer = -11
metadata/_custom_type_script = "uid://bovpcynx16cl5"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -11
visible = false

[node name="BorderRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -203.5
offset_right = 121.5
offset_bottom = 203.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PauseLabel" type="Label" parent="CanvasLayer/BorderRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = 8.0
offset_right = 51.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_gk5xj")
theme_override_font_sizes/font_size = 36
text = "[PauseLabel]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -149.0
offset_right = 96.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.827451, 0.827451, 0.827451, 1)

[node name="ButtonContainer" type="Control" parent="CanvasLayer/BackgroundRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="CanvasLayer/BackgroundRect/ButtonContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 16.0
offset_right = -5.0
offset_bottom = 60.0
grow_horizontal = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5cfgx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_5cfgx")
text = "[ResumeButton]"

[node name="SettingButton" type="Button" parent="CanvasLayer/BackgroundRect/ButtonContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 72.0
offset_right = -5.0
offset_bottom = 116.0
grow_horizontal = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5cfgx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_5cfgx")
text = "[SettingButton]"

[node name="QuitToMenuButton" type="Button" parent="CanvasLayer/BackgroundRect/ButtonContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 128.0
offset_right = -5.0
offset_bottom = 172.0
grow_horizontal = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5cfgx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_5cfgx")
text = "[MenuButton]"

[node name="RestartButton" type="Button" parent="CanvasLayer/BackgroundRect/ButtonContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 184.0
offset_right = -5.0
offset_bottom = 228.0
grow_horizontal = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5cfgx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_5cfgx")
text = "[RestartButton]"

[node name="ExitGameButton" type="Button" parent="CanvasLayer/BackgroundRect/ButtonContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 240.0
offset_right = -5.0
offset_bottom = 284.0
grow_horizontal = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5cfgx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_5cfgx")
text = "[ExitButton]"

[connection signal="button_down" from="CanvasLayer/BackgroundRect/ButtonContainer/ResumeButton" to="." method="_on_resume_button_button_down"]
[connection signal="button_up" from="CanvasLayer/BackgroundRect/ButtonContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="pressed" from="CanvasLayer/BackgroundRect/ButtonContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackgroundRect/ButtonContainer/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackgroundRect/ButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackgroundRect/ButtonContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
